--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -75,13 +75,12 @@
         <script src="[% scheme %]://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="[% scheme %]://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-
     </head>
 
     [% PROCESS snippets/main_sections.tt %]
 
-    <body class="page-[% page %]">
-        <header role="banner">
+    <body class="page [% page %]">
+        <header role="banner" class="container">
         [% IF header AND NOT page_as_mech %]
             <p class="text-center">[% header %]</p>
         [% END %]
@@ -91,84 +90,88 @@
                 PROCESS navigation;
             END 
         %]
+
+        [% IF messages.size %]
+            <ul class="messages">
             [% FOR message IN messages %]
-                <div role="alert" class="alert alert-[% message.bootstrap_color %]">
+                <li role="alert" class="alert alert-[% message.bootstrap_color %]">
                     [% IF message.inClass("html") %]
                         [% message.reason %]: [% message.toString %]
                     [% ELSE %]
                         [% message.reason %]: [% message.toString | html_entity %]
                     [% END %]
-                </div>
+                </li>
             [% END %]
+            </ul>
+        [% END %]
 
             [% IF session.rewind %]
-                <div class="alert alert-info">You are viewing data as it was on [% session.rewind.format_cldr(config.dateformat) %] at [% session.rewind.hms %]</div>
+                <div role="alert" class="alert alert-info">You are viewing data as it was on [% session.rewind.format_cldr(config.dateformat) %] at [% session.rewind.hms %]</div>
             [% END %]
+        </header>
 
+        <main role="main" id="main" class="container">
+            [% content %]
+        </main>
+
+        [% WRAPPER modal_dialog.tt
+            modal_id="modal-sendemail"
+            modal_action_text="Send e-mail"
+            modal_heading="Send an e-mail"
+            modal_with_cancel_button=1
+            modal_with_form=1
+            modal_form_method="post"
+        %]
+            <div class="form-group">
+                <label for="email_organisation">Users in:</label>
+                <select class="form-control" id="email_organisation" name="email_organisation">
+                    <option value="">&lt;All users&gt;</option>
+                    [% FOREACH org IN organisations %]
+                        <option value="[% org.id %]">[% org.name | html_entity %]</option>
+                    [% END %]
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="email_subject">Subject</label>
+                <input type="text" class="form-control" name="email_subject" id="email_subject" placeholder="Subject">
+            </div>
+            <div class="form-group">
+                <label for="email_text">Message</label>
+                <textarea class="form-control" id="email_text" name="email_text" rows="10"></textarea>
+            </div>
+        [% END %]
+
+        [% IF v %]
             [% WRAPPER modal_dialog.tt
-                modal_id="modal-sendemail"
-                modal_action_text="Send e-mail"
-                modal_heading="Send an e-mail"
-                modal_with_cancel_button=1
-                modal_with_form=1
-                modal_form_method="post"
+                modal_id="modal_alert" modal_action_text="Create alert" modal_heading="Configure alert for " _  v.name
+                modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
             %]
+                <input type="hidden" value="[% v.id %]" name="view_id">
                 <div class="form-group">
-                    <label for="email_organisation">Users in:</label>
-                    <select class="form-control" id="email_organisation" name="email_organisation">
-                        <option value="">&lt;All users&gt;</option>
-                        [% FOREACH org IN organisations %]
-                            <option value="[% org.id %]">[% org.name | html_entity %]</option>
-                        [% END %]
+                    <label for="frequency">Alert me:</label>
+                    <select class="form-control" id="frequency" name="frequency">
+                        <option value="" [% IF NOT v.alert %]selected[% END %]>Never</option>
+                        <option value="0" [% IF v.alert.frequency == 0 %]selected[% END %]>Instantly</option>
+                        <option value="24" [% IF v.alert.frequency == 24 %]selected[% END %]>Every 24 hours</option>
                     </select>
                 </div>
-                <div class="form-group">
-                    <label for="email_subject">Subject</label>
-                    <input type="text" class="form-control" name="email_subject" id="email_subject" placeholder="Subject">
-                </div>
-                <div class="form-group">
-                    <label for="email_text">Message</label>
-                    <textarea class="form-control" id="email_text" name="email_text" rows="10"></textarea>
-                </div>
             [% END %]
+        [% END %]
 
-            [% IF v %]
-                [% WRAPPER modal_dialog.tt
-                    modal_id="modal_alert" modal_action_text="Create alert" modal_heading="Configure alert for " _  v.name
-                    modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
-                %]
-                    <input type="hidden" value="[% v.id %]" name="view_id">
-                    <div class="form-group">
-                        <label for="frequency">Alert me:</label>
-                        <select class="form-control" id="frequency" name="frequency">
-                            <option value="" [% IF NOT v.alert %]selected[% END %]>Never</option>
-                            <option value="0" [% IF v.alert.frequency == 0 %]selected[% END %]>Instantly</option>
-                            <option value="24" [% IF v.alert.frequency == 24 %]selected[% END %]>Every 24 hours</option>
-                        </select>
-                    </div>
-                [% END %]
-            [% END %]
-
-            [% WRAPPER modal_dialog.tt
-                modal_id="modal_rewind" modal_action_text="Submit" modal_heading="View data as it was at a previous time"
-                modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post" modal_extra_action = "modal_rewind_reset"
-                modal_extra_action_text = "Reset to current"
-            %]
-                <div class="form-group">
-                    <label for="rewind_date">Date ([% config.dateformat %]):</label>
-                    <input id="rewind_date" class="form-control datepicker" type="text" value="[% session.rewind.format_cldr(config.dateformat) %]" name="rewind_date">
-                </div>
-                <div class="form-group">
-                    <label for="rewind_time">Time (HH:MM:SS):</label>
-                    <input id="rewind_time" class="form-control" type="text" value="[% session.rewind.hms %]" name="rewind_time" placeholder="23:59:59">
-                </div>
-            [% END %]
-
-
-            [% content %]
-
-        </div><!-- /.container -->
-
+        [% WRAPPER modal_dialog.tt
+            modal_id="modal_rewind" modal_action_text="Submit" modal_heading="View data as it was at a previous time"
+            modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post" modal_extra_action = "modal_rewind_reset"
+            modal_extra_action_text = "Reset to current"
+        %]
+            <div class="form-group">
+                <label for="rewind_date">Date ([% config.dateformat %]):</label>
+                <input id="rewind_date" class="form-control datepicker" type="text" value="[% session.rewind.format_cldr(config.dateformat) %]" name="rewind_date">
+            </div>
+            <div class="form-group">
+                <label for="rewind_time">Time (HH:MM:SS):</label>
+                <input id="rewind_time" class="form-control" type="text" value="[% session.rewind.hms %]" name="rewind_time" placeholder="23:59:59">
+            </div>
+        [% END %]
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
@@ -205,6 +208,7 @@
             <script language="javascript" type="text/javascript" src="[% url.js %]/jquery.jqplot.min.js"></script>
             <script language="javascript" type="text/javascript" src="[% url.js %]/jqplot/jqplot.highlighter.min.js"></script>
             <link rel="stylesheet" type="text/css" href="[% url.css %]/jquery.jqplot.min.css" />
+            [% # TODO: concatenate and uglify jqplot.* %]
             <script type="text/javascript" src="[% url.js %]/jqplot/jqplot.barRenderer.js"></script>
             <script type="text/javascript" src="[% url.js %]/jqplot/jqplot.donutRenderer.js"></script>
             <script type="text/javascript" src="[% url.js %]/jqplot/jqplot.pieRenderer.js"></script>
@@ -278,7 +282,6 @@
             <script src="[% url.js %]/jstree-misc.js"></script>
             <script src="[% url.js %]/bootstrap-select.min.js"></script>
         [% END %]
-    </div>
     </body>
 </html>
 
