--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -669,6 +669,11 @@ nav .dropdown-toggle:focus,
 nav .dropdown-toggle:hover {
   outline: 2px solid #85bffd; }
 
+/* override bootstrap */
+nav.navbar li > a.home {
+  padding-left: 6px;
+  padding-right: 6px; }
+
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #000000; }
